[tool.poetry]
name = "cursor"
version = "0.0.0"
description = "Cursor is a modern online learning platform that offers an intuitive interface, flexible customization options, and advanced integration features with other tools. It provides opportunities for adaptation to the needs of individual courses and users, ensuring easy content management."
authors = ["SavinDevelop <savinnikita602@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-browser-reload = "^1.15.0"
django = "^5.1"
django-split-settings = "^1.3.2"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
